refactor
delete threading
add communicate service
add recipe class
add message class
rewrite tests